--- a/src/components/css/Header.css
+++ b/src/components/css/Header.css
@@ -1,9 +1,11 @@
 .header {
-    background-color: transparent;
+  background-color: rgba(248, 209, 34, 0.533); /* Setting background color with opacity */
+  backdrop-filter: blur(10px); /* Applying blur effect */
+}
+
+@media (max-width: 576px) {
+  .header {
+    background-color: rgba(248, 209, 34, 0.533); /* Setting background color with opacity */
+    backdrop-filter: blur(10px); /* Applying blur effect */
   }
-  @media (max-width: 576px) {
-    .header {
-      background-color: 'black';
-    }
-  }
-  
+}
