--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
-  background: linear-gradient(45deg, #000000, #f8d022);
+  /* background: linear-gradient(45deg, #000000, #f8d022); */
+  background-color: #f8d022;
 }
 
